<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingBottom="16dp"
        android:paddingLeft="8dp"
        android:paddingTop="24dp"
        android:text="@string/description"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/question1"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="italic"
            android:fontFamily="sans-serif-smallcaps"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/answer1"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/answer2"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/answer3"
                android:textAppearance="?android:textAppearanceMedium" />


        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/question2"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="italic"
            android:fontFamily="sans-serif-smallcaps"/>

        <CheckBox
            android:id="@+id/check1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="sans-serif-light"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="6dp"
            android:text="@string/check1"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/check2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="sans-serif-light"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="6dp"
            android:text="@string/check2"
            android:textSize="16sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/question3"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="italic"
            android:fontFamily="sans-serif-smallcaps"/>

        <EditText
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_answer"
            android:inputType="textCapCharacters"
            android:paddingBottom="16dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="sans-serif-light"
            android:onClick="submitQuiz"
            android:text="@string/submit"
            android:textColor="@android:color/black"
            android:textSize="16sp" />



    </LinearLayout>
</ScrollView>